Fix vertical align, font size and weight
Add new option to control de font weight, fix missing font size for text,
remove tag strong of author.

--- a/content/plugins/hashcore-widgets-bundle/widgets/testimonial-carousel/css/style.css
+++ b/content/plugins/hashcore-widgets-bundle/widgets/testimonial-carousel/css/style.css
@@ -62,6 +62,8 @@
 .owl-carousel .owl-stage {
   position: relative;
   -ms-touch-action: pan-Y;
+  display: flex;
+  align-items: center;
 }
 .owl-carousel .owl-stage:after {
   content: ".";
